Fix for bug #4815 (embedded server calculates wrong places for outfiles) In some places in mysqld behaviour depends on system working directory It works badly in libmysqld because user can set it in the way he needs. I think we should explicitly insert mysql_real_data_home value in paths in these places